# OpenGestureXR

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
ai_engine/: gesture_classifier.py  gesture_detector.py
ai_engine/inference/: gesture_detector.py  onnx_runtime.py
ai_engine/training/: collect_data.py  export_onnx.py  train.py
ai_engine/utils/: benchmark.py
gesture_api/server/: main.py
tests/: test_api.py  test_gesture_classifier.py  test_training.py
unity_plugin/Scripts/: GestureClient.cs  ObjectInteractor.cs
unity_plugin/Scripts/XR/: HandTrackingProvider.cs
